<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_taikhoan">

    <fragment
        android:id="@+id/nav_taikhoan"
        android:name="com.example.duanmau.ui.TaiKhoan.TaiKhoanFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sach"
        android:name="com.example.duanmau.ui.Sach.SachFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_loaisach"
        android:name="com.example.duanmau.ui.LoaiSach.LoaiSachFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_hoadon"
        android:name="com.example.duanmau.ui.HoaDon.HoaDonFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_top"
        android:name="com.example.duanmau.ui.TopBanChay.TopFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_thongke"
        android:name="com.example.duanmau.ui.ThongKe.ThongKeFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.duanmau.ui.ThongKe.ThongKeFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_send" />
</navigation>