<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/AppTheme1"
    android:layout_margin="8dp"
    tools:context=".ui.TaiKhoan.FixAccount">



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        android:layout_marginTop="10dp"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/textinput_taikhoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fix_taikhoarn" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/textinput_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fix_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true">

        <EditText
            android:inputType="number"
            android:id="@+id/textinput_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fix_phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/textinput_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fix_address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/textinput_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fix_password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnSave"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/btnExit"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:text="@string/button_exit"
        android:textColor="@color/white"/>




</LinearLayout>