<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme1"
    tools:context=".ui.Sach.FixSach">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/fix_sach"></androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edtTheLoaii"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fix_theloai" />
    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/Spinerr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:padding="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edtTenSachh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fix_tensach" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:padding="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edtTacGiaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fix_tacgia" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:padding="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="35"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edtNhaXuatBann"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fix_nhaxb" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:padding="16dp"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edtGiaBiaz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fix_giabia"
            android:inputType="number"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"

        android:padding="16dp"
        android:text="@string/button_exit"
        android:textColor="@color/white" />


</LinearLayout>