<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme1"
    tools:context=".ui.HoaDon.AddHoaDon">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_hoadon"></androidx.appcompat.widget.Toolbar>
    <com.google.android.material.textfield.TextInputLayout
        android:padding="16dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        >

        <EditText
            android:id="@+id/edtMaHoaDon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fix_mahoadon" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="16dp"
            app:errorEnabled="true">


            <EditText
                android:id="@+id/edtNgay"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:hint="@string/fix_ngay" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgDate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/time" />

    </LinearLayout>


    <Button
        android:layout_margin="18dp"
        android:id="@+id/btnSave"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/white"/>
    <Button
        android:layout_margin="18dp"
        android:id="@+id/btnExit"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:text="@string/button_exit"
        android:textColor="@color/white"/>


</LinearLayout>