<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="267dp"
        android:layout_height="221dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/thongke1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thongke_homnay"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/tvNgay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp" />
        <TextView
            android:text="   VND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thongke_thang"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/tvThang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp" />
        <TextView
            android:text="   VND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thongke_nam"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/tvNam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp" />
        <TextView
            android:text="   VND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>